package com.myzuji.study.gof23.factory.absfactory.pizzastore.order;

import com.myzuji.study.gof23.factory.absfactory.pizzastore.pizza.Pizza;

// 一个抽象工厂模式的抽象层
public interface AbsFactory {

    // 让下面的工厂子类来具体实现
    Pizza createPizza(String orderType);
}
